expired and unexpired stories and media. [David]

=item *

If a story is passed to the C<burn_another()> or C<preview_another()> burner
methods that is the same as the story currently being burned, it will no
longer be published or previewed again by C<burn_another()> or
C<preview_another()>, thus mitigating the possibility of infinite loops.
[David]

=back

=head2 Bug Fixes

=over

=item *

The Template Toolkit and HTML::Template burners work again. [David]

=item *

Fixed syntax error in Bric::Util::Trans::SFTP. Reported by Kenneth Marshall.
[David]

=item *

Eliminated "Subroutine Bric::App::Handler::rethrow_exception redefined"
warning during startup with HTML::Mason 1.30. [David]

=item *

Fixed the C<no_site_id> parameter to Bric::Biz::Asset::Formatting when
specified using the C<ANY()> function. [David]

=item *

Having a custom field beginning with a leading underscore was causing
an error in comp/widgets/wrappers/sharky/header.mc. [Scott]

=item *

Errors thrown when setting element field values will not be displayed as error
messages within the context of the element profile, rather than throwing a
fatal exception. This is useful for invalid dates, foe example. [David]

=item *

The SOAP interface for categories now properly checks for and sets as
appropriate the C<active> attribute on categories being created or updated.
Reported by Phillip Smith. [David]

=item *

Fixed database DDLs to work with PostgreSQL 8.1. [David]

=item *

Defunct media files are now properly removed from the delivery server whenever
a media document's file name has changed. Reported by Brad Fox. [David]

=item *

Clicking the "Return" button when viewing a subelement in a story or media
document not checked out by the user no longer drops into edit view. Reported
by John Greene. [David]

=back

=cut

##############################################################################

=head1 VERSION 1.8.6 (2005-07-19)

=head2 Improvements

=over 4

=item *
