@@ -26,6 +26,11 @@
     INSERT INTO event_type (id, key_name, name, description, class__id, active)
     VALUES (NEXTVAL('seq_event_type'), 'story_republish', 'Story Republished', 'Story was republished.', 10, 1);
 
+-- ********** 'story_expire' ************ --
+
+    INSERT INTO event_type (id, key_name, name, description, class__id, active)
+    VALUES (NEXTVAL('seq_event_type'), 'story_expire', 'Story Expired', 'Story was expired.', 10, 1);
+
 -- ********** 'story_clone' ************ --
 
     INSERT INTO event_type (id, key_name, name, description, class__id, active)
@@ -45,6 +50,11 @@
 
     INSERT INTO event_type (id, key_name, name, description, class__id, active)
     VALUES (NEXTVAL('seq_event_type'), 'media_republish', 'Media Republished', 'Media was republished.', 46, 1);
+
+-- ********** 'media_expire' ************ --
+
+    INSERT INTO event_type (id, key_name, name, description, class__id, active)
+    VALUES (NEXTVAL('seq_event_type'), 'media_expire', 'Media Expired', 'Media was expired.', 10, 1);
 
 -- ********** 'formatting_checkin' ************ --
 
